--- a/src/main/resources/config/jdbc.properties
+++ b/src/main/resources/config/jdbc.properties
@@ -1,5 +1,5 @@
 #mysql
-#jdbc_driverClassName=com.mysql.jdbc.Driver
-#jdbc_url=jdbc:mysql://192.168.2.99:3306/xxxx?useUnicode=true&amp;characterEncoding=utf-8
-#jdbc_username=your name
-#jdbc_password=your password
+jdbc_driverClassName=com.mysql.jdbc.Driver
+jdbc_url=jdbc:mysql://localhost:3306/test?useUnicode=true&amp;characterEncoding=utf-8
+jdbc_username=root
+jdbc_password=
