修改为spring4.2.2配置，集成Webservice

--- a/src/main/resources/config/jdbc.properties
+++ b/src/main/resources/config/jdbc.properties
@@ -1,5 +1,12 @@
 #mysql
 jdbc_driverClassName=com.mysql.jdbc.Driver
-jdbc_url=jdbc:mysql://localhost:3306/test?useUnicode=true&amp;characterEncoding=utf-8
+jdbc_url=jdbc:mysql://192.168.199.204:3306/ucenter?useUnicode=true&amp;characterEncoding=utf-8
 jdbc_username=root
-jdbc_password=
+jdbc_password=root
+
+
+#mysql-navtive
+#jdbc_driverClassName=com.mysql.jdbc.Driver
+#jdbc_url=jdbc:mysql://localhost:3306/oucenter?useUnicode=true&amp;characterEncoding=utf-8
+#jdbc_username=root
+#jdbc_password=
