--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.dcits.cncic.dss</groupId>
-	<artifactId>cncic-dss</artifactId>
+	<groupId>com.myzh.ucenter</groupId>
+	<artifactId>ucenter</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>cncic-dss</name>
+	<name>myzh-ucenter</name>
 	<description>cncic-dss</description>
 	<url>http://maven.apache.org</url>
 	<properties>
@@ -14,16 +14,16 @@
 		<jdk.version>1.7</jdk.version>
 		<rep.ip>localhost</rep.ip>
 		<!-- spring版本号 -->
-		<spring.version>3.0.5.RELEASE</spring.version>
-		<!-- 
-		<spring.version>3.2.3.RELEASE</spring.version>
-		 -->
+		<!-- <spring.version>3.0.5.RELEASE</spring.version> -->
+		<spring.version>4.2.2.RELEASE</spring.version>
 		<!-- mybatis版本号 -->
 		<mybatis.version>3.2.7</mybatis.version>
 		<!-- log4j日志文件管理包版本 -->
 		<slf4j.version>1.6.6</slf4j.version>
 		<log4j.version>1.2.9</log4j.version>
 		<struts.version>2.3.24</struts.version>
+		<cxf.version>3.1.4</cxf.version>
+		<sitemesh.version>3.0.0</sitemesh.version>
 	</properties>
 	<!-- 配置远程发布到私服，mvn deploy -->
 	<distributionManagement>
@@ -59,7 +59,32 @@
 			<artifactId>struts2-core</artifactId>
 			<version>${struts.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.googlecode.xmemcached</groupId>
+			<artifactId>xmemcached</artifactId>
+			<version>1.3.8</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>13.0</version>
+		</dependency>
+		<!-- 
+		<dependency>
+			<groupId>org.sitemesh</groupId>
+			<artifactId>sitemesh</artifactId>
+			<version>{sitemesh.version}</version>
+		</dependency>
+		 -->
+		<dependency>
+			<groupId>org.sitemesh</groupId>
+			<artifactId>sitemesh</artifactId>
+			<version>{sitemesh.version}</version>
+		        <scope>system</scope>
+		        <!--本地jar的路径,相对或者绝对都可以-->
+		        <systemPath>E:\developer\workspace\weixin-freelancer\lib\sitemesh-3.0.1.jar</systemPath>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-json-plugin</artifactId>
@@ -107,40 +132,34 @@
 		<!-- springframe start -->
 		<dependency>
 			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-
+		<dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-beans</artifactId>
+	<version>${spring.version}</version>
+</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-oxm</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-tx</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
@@ -149,19 +168,43 @@
 
 		<dependency>
 			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aspects</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+
+
+
+
+
+
+
+
 
 		<!-- springframe end -->
-		
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>1.9.5</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>1.9.5</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
@@ -186,13 +229,6 @@
 			<version>5.1.29</version>
 		</dependency>
 
-		<!-- 添加oracle jdbc driver 
-		<dependency>
-		  <groupId>oracle-jdbc</groupId>
-		  <artifactId>oracle-jdbc</artifactId>
-		  <version>4.0</version>
-		</dependency>
-		-->
 		<!-- junit测试包 -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -241,23 +277,29 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>${slf4j.version}</version>
 		</dependency>
-		
-		<!-- log end -->
-		<!-- 
 		<dependency>
-			<groupId>servlet-api</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-frontend-jaxws</artifactId>
+			<version>${cxf.version}</version>
 		</dependency>
-		 -->
-		<!-- 
 		<dependency>
-		 <groupId>com.sun</groupId>
-		 <artifactId>tools</artifactId>
-		 <version>${jdk.version}</version>
-		 <scope>system</scope>
-		 <systemPath>D:\programfiles\jdk\Java\jdk1.6.0_43/lib/tools.jar</systemPath>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-transports-http</artifactId>
+			<version>${cxf.version}</version>
 		</dependency>
-		 -->
+		<!-- Jetty is needed if you're are not using the CXFServlet -->
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-transports-http-jetty</artifactId>
+			<version>${cxf.version}</version>
+		</dependency>
+		<!-- <dependency> <groupId>org.apache.cxf</groupId> <artifactId>cxf-rt-transports-common</artifactId> 
+			<version>2.5.4</version> <type>jar</type> <scope>compile</scope> </dependency> 
+			<dependency> <groupId>org.apache.cxf</groupId> <artifactId>cxf-rt-core</artifactId> 
+			<version>2.6.1</version> <type>jar</type> <scope>compile</scope> </dependency> 
+			<dependency> <groupId>org.apache.cxf</groupId> <artifactId>cxf-rt-bindings-soap</artifactId> 
+			<version>2.6.1</version> </dependency> <dependency> <groupId>org.apache.cxf</groupId> 
+			<artifactId>cxf-rt-transports-http-jetty</artifactId> <version>2.6.1</version> 
+			<type>jar</type> <scope>compile</scope> </dependency> -->
 	</dependencies>
 </project>
